--- a/thesis.tex
+++ b/thesis.tex
@@ -9,10 +9,9 @@
 \input{include/packages}
 
 \usepackage{float}
+\usepackage{hyperref}
+\usepackage{url}
 
-
-
-%TODO Saját adataiddal töltsd ki a kommentek szerint
 %--------------------------------------------------------------------------------------
 \newcommand{\szerzoVezeteknev}{Székely}
 \newcommand{\szerzoKeresztnev}{Dániel}
@@ -37,7 +36,6 @@ tervezése, építése, optimalizálása, beüzemelése} % Cím
 \newcommand{\szak}{\infoBSc} % Mérnökinformatikus BSc (\infoMsc), MSc (\infoMsc), Gazdaságinformatikus BSc (\gazdInfoBsc), MSc (\gazdInfoMsc), vagy Villamosmérnöki BSc (\villBSc), MSc (\villMSc)
 
 \include{include/variables}
-%TODO Nyelv beállítása
 % Beállítások magyar nyelvű dolgozathoz
 \input{include/thesis-hu}
 % Settings for English documents
@@ -80,7 +78,7 @@ tervezése, építése, optimalizálása, beüzemelése} % Cím
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 \pagenumbering{arabic}
 
-%TODO készítsd el a saját munkád
+% Saját munka
 \include{content/introduction}
 \include{content/audio_over_ip_systems}
 \include{content/system_desing}
