--- a/bib/mybib.bib
+++ b/bib/mybib.bib
@@ -1,56 +1,3 @@
-
-thesis{KissPhD,
-  author      = {Peter Kiss},
-  institution = {Technical University of Timi\c{s}oara, Romania},
-  month       = {04},
-  title       = {Adaptive Digital Compensation of Analog Circuit Imperfections for Cascaded Delta-Sigma Analog-to-Digital Converters},
-  type        = {phdthesis},
-  year        = {2000},
-}
-
-report{Jeney,
-  author      = {Jeney, Gábor},
-  institution = {Budapesti Műszaki és Gazdaságtudományi Egyetem, Híradástechnikai Tanszék},
-  location    = {Budapest},
-  note        = {\url{http://www.mcl.hu/~jeneyg/kinezet.pdf}},
-  title       = {Hogyan néz ki egy igényes dokumentum? {N}éhány szóban az alapvető tipográfiai szabályokról},
-  type        = {techreport},
-  year        = {2014},
-}
-
-----------------------------------------------------------------------------
-Sound Reinforcement for
-Audio Engineers
-Edited by Wolfgang Ahnert and Dirk Noy
-
-First published 2023
-by Routledge
-4 Park Square, Milton Park, Abingdon, Oxon OX14 4RN
-and by Routledge
-605 Third Avenue, New York, NY 10158
-Routledge is an imprint of the Taylor & Francis Group, an informa business
-© 2023 selection and editorial matter, Wolfgang Ahnert and Dirk Noy; individual chapters,
-the contributors
-The right of Wolfgang Ahnert and Dirk Noy to be identified as the authors of the
-editorial material, and of the authors for their individual chapters, has been asserted in
-accordance with sections 77 and 78 of the Copyright, Designs and Patents Act 1988.
-All rights reserved. No part of this book may be reprinted or reproduced or utilised
-in any form or by any electronic, mechanical, or other means, now known or
-hereafter invented, including photocopying and recording, or in any information
-storage or retrieval system, without permission in writing from the publishers.
-Trademark notice: Product or corporate names may be trademarks or registered trademarks,
-and are used only for identification and explanation without intent to infringe.
-British Library Cataloguing-in-Publication Data
-A catalogue record for this book is available from the British Library
-Library of Congress Cataloging-in-Publication Data
-A catalog record has been requested for this book
-ISBN: 978-1-032-11518-4 (hbk)
-ISBN: 978-1-032-11517-7 (pbk)
-ISBN: 978-1-003-22026-8 (ebk)
-DOI: 10.4324/9781003220268
-Typeset in Goudy
-by Newgen Publishing UK
-
 @book{AHNERT2023,
   editor     = {Wolfgang Ahnert and Dirk Noy},
   title      = {Sound Reinforcement for Audio Engineers},
@@ -63,60 +10,6 @@ by Newgen Publishing UK
   typeset    = {Goudy},
   typesetter = {Newgen Publishing UK}
 }
-
-
-----------------------------------------------------------------------------
-
-
-----------------------------------------------------------------------------
-Sound Systems: Design and Optimization
-Modern Techniques and Tools for Sound System Design and
-Alignment
-Third Edition
-Bob McCarthy
-
-
-Third edition published 2016
-by Focal Press
-711 Third Avenue, New York, NY 10017
-and by Focal Press
-2 Park Square, Milton Park, Abingdon, Oxon OX14 4RN
-Focal Press is an imprint of the Taylor & Francis Group, an informa business.
-© 2016 Bob McCarthy
-The right of Bob McCarthy to be identified as the author of this work has been asserted by him in
-accordance with sections 77 and 78 of the Copyright, Designs and Patents Act 1988.
-All rights reserved. No part of this book may be reprinted or reproduced or utilized in any form or
-by any electronic, mechanical or other means, now known or hereafter invented, including
-photocopying and recording, or in any information storage or retrieval system, without permission in
-writing from the publishers.
-Notices
-Knowledge and best practice in this field are constantly changing. As new research and experience
-broaden our understanding, changes in research methods, professional practices or medical treatment
-may become necessary.
-Practitioners and researchers must always rely on their own experience and knowledge in evaluating
-and using any information, methods, compounds or experiments described herein. In using such
-information or methods they should be mindful of their own safety and the safety of others,
-including parties for whom they have a professional responsibility.
-Product or corporate names may be trademarks or registered trademarks, and are used only for
-identification and explanation without intent to infringe.
-First published XXX by XX
-Second edition published XXX by XX
-Library of Congress Cataloging-in-Publication Data
-McCarthy, Bob.
-Sound systems: design and optimization: modern techniques and tools for sound system design and
-alignment / by Bob McCarthy. — Third edition.
-pages cm
-Includes bibliographical references and index.
-ISBN 978-0-415-73099-0 (hardback) — ISBN 978-0-415-73101-0 (pbk.) — ISBN 978-1-315-84984-3
-(ebk) 1. Sound—Recording and reproducing. I. Title.
-TK7881.4.M42 2016
-621.389'3—dc23
-2015016842
-ISBN: 978-0-415-73101-0 (pbk)
-ISBN: 978-0-415-73099-0 (hbk)
-ISBN: 978-1-315-84984-3 (ebk)
-Typeset in Giovanni
-By Apex CoVantage, LLC
 
 @book{MCCARTHY2016,
   author     = {Bob McCarthy},
@@ -133,50 +26,43 @@ By Apex CoVantage, LLC
   typesetter = {Apex CoVantage, LLC}
 }
 
-
-----------------------------------------------------------------------------
-https://broadmax.hu/wp-content/uploads/2016/10/three-pillars-audio-networking-whitepaper-audinate.pdf
-https://broadmax.hu/wp-content/uploads/2016/10/rise-of-audio-networking-audinate-wp.pdf
-https://broadmax.hu/blog/audio-over-ip/
-https://rhconsulting.uk/blog/networked-audio-products-2023/
-
-
-@bachelorsthesis{TAMASDAVIDBSC,
-  author    = {Tamás Dávid},
-  title     = {Automatizált színházi előadás bemutatása a villamos hálózat kiépítésétől a közönségig},
-  school    = {Széchenyi István Egyetem},
-  year      = {2016},
-  type      = {Villamosmérnöki BSc szak},
-  startyear = {2015},
-  endyear   = {2016},
-  language  = {magyar},
-  type      = {nyilvános}
-}
-
 @manual{DISPLAY23USERGUIDE,
   title  = {Display v2.3 USER GUIDE v1.5},
   author = {Martin Audio},
   url    = {https://martin-audio.com/downloads/userguides/Display-2.3-User-Guide-v1.5.pdf},
-  note   = {Accessed on: 2024-01-04.}
+  note   = {Accessed on: 2024.01.04.}
 }
 
 @manual{WPCUSERGUIDE,
   title  = {WPC User Guide},
   author = {Martin Audio},
   url    = {https://martin-audio.com/downloads/userguides/WPC-User-Guide.pdf},
-  note   = {Accessed on: 2024-01-04.}
+  note   = {Accessed on: 2024.01.04.}
 }
 
 @manual{WPMUSERGUIDE,
   title  = {WPM User Guide},
   author = {Martin Audio},
   url    = {https://martin-audio.com/downloads/userguides/WPM-User-Guide.pdf},
-  note   = {Accessed on: 2024-01-04.}
+  note   = {Accessed on: 2024.01.04.}
 }
 
 @manual{SXSUBWOOFERUSERGUIDE,
   title  = {SX Subwoofer User Guide},
   author = {Martin Audio},
   url    = {https://martin-audio.com/downloads/userguides/SX-Subwoofer-User-Guide.pdf},
-  note   = {Accessed on: 2024-01-04.}
+  note   = {Accessed on: 2024.01.04.}
 }
+
+@manual{VUNETUSERGUIDE,
+  title  = {VU-NET 2.2 User Guide v4.7},
+  author = {Martin Audio},
+  url    = {https://martin-audio.com/downloads/userguides/VU-NET%202.2%20User%20Guide%20v4.7.pdf},
+  note   = {Accessed on: 2024.01.04.}
+}
+
+----------------------------------------------------------------------------
+https://broadmax.hu/wp-content/uploads/2016/10/three-pillars-audio-networking-whitepaper-audinate.pdf
+https://broadmax.hu/wp-content/uploads/2016/10/rise-of-audio-networking-audinate-wp.pdf
+https://broadmax.hu/blog/audio-over-ip/
+https://rhconsulting.uk/blog/networked-audio-products-2023/
