--- a/bib/mybib.bib
+++ b/bib/mybib.bib
@@ -61,6 +61,13 @@
   note   = {Accessed on: 2024.01.04.}
 }
 
+@online{MERLINVANVEEN,
+  author = {Merlijn van Veen},
+  title = {Calculators},
+  url = {https://www.merlijnvanveen.nl/en/calculators},
+  note = {Accessed on: 2024.01.06.}
+}
+
 ----------------------------------------------------------------------------
 https://broadmax.hu/wp-content/uploads/2016/10/three-pillars-audio-networking-whitepaper-audinate.pdf
 https://broadmax.hu/wp-content/uploads/2016/10/rise-of-audio-networking-audinate-wp.pdf
