--- a/content/audio_over_ip_systems.tex
+++ b/content/audio_over_ip_systems.tex
@@ -25,7 +25,7 @@ Még a legmodernebb és legjobb A-D (analog to digital) konverterek sem tudták
 teljes mértékben visszaadni azt a tipikus analog hangot, amire egy analog
 hangrendszer képes. Ez elsősorban abból fakad, hogy egy átlagos digitális
 keverővel és végfokrendszerrel ellátott új generációs hangrendszerben sok A-D és
-D-A konverzió történik, és minden egyes konverzi-óval, hiába veszünk sok mintát
+D-A konverzió történik, és minden egyes konverzióval, hiába veszünk sok mintát
 (96 kHz 24 bit 3000+kbps), a hang akkor is veszt egy kicsit a
 karakterisztikájából.
 %----------------------------------------------------------------------------
@@ -41,7 +41,7 @@ karakterisztikájából.
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
-\subsection{Késleltetés és bufferek}
+\subsection{Késleltetés}
 %----------------------------------------------------------------------------
 
 %----------------------------------------------------------------------------
