feat(thesis): daily update

--- a/content/system_desing.tex
+++ b/content/system_desing.tex
@@ -371,7 +371,7 @@ maximálisan 144 dB hangnyomás szintet tudnak biztosítani. \cite{SXSUBWOOFERUS
 %----------------------------------------------------------------------------
 A \textit{``SUB''} tervezést egy általam készített Excel kalkulátor
 segítségével végzem el. Ez a táblázat egyesíti a Martin Audio és Merlin van Veen által
-készített kalkulátorokat (S.A.D), valamint kiegészítésre került további modulokkal és funkciókkal. \cite{MERLINVANVEEN}
+készített kalkulátorokat (S.A.D), valamint kiegészítésre került további modulokkal és funkciókkal. \cite{MERLINVANVEEN} \cite{MARTINSUBCALCULATOR}
 A egy EndFire konfigurációs mélyláda elrendezést terveztem. 
 (Egy EndFire Pack = két láda egymás előtt adott távolságra és késleltetési értékkel) 
 A táblázatba megadhatjuk, hogy éppen helyileg hol
@@ -381,12 +381,13 @@ megkapjuk az optimális értékeket a tervezéshez.
 A program kiszámolja, hogy milyen távolságra kell a ládákat helyezni egymástól előrefelé,
 valamint mekkora \textit{``delay''} értéket kell alkalmazni. 
 Majd az egyes EndFire Pack-ok egymáshoz képesti távolságot oldalirányban és azok
-közötti delay értéket is megkapjuk. A sub array-t 63 Hz-re optimalizáltam, mivel
+közötti delay értéket is megkapjuk. A \textit{``SUB array''}-t 63 Hz-re optimalizáltam, mivel
 ez az a frekvenciatartomány, ahol a mélyláda rendszer a legtöbb energiát tudja leadni.
 %----------------------------------------------------------------------------
 \subsection{Allen \& Heath digitális keverőrendszer}
 %----------------------------------------------------------------------------
-
+A jelenlegi rendszer két keverőpultot fog tartalmazni, egyet a fő hangrendszerhez, és egyet a monitor rendszerhez.
+Mindkét keverőpult egy Allen \& Heath SQ-6 típusú digitális keverőpult lesz.
 
 
 %----------------------------------------------------------------------------
