--- a/bib/mybib.bib
+++ b/bib/mybib.bib
@@ -65,7 +65,14 @@
   author = {Merlijn van Veen},
   title = {Calculators},
   url = {https://www.merlijnvanveen.nl/en/calculators},
-  note = {Accessed on: 2024.01.06.}
+  note = {Accessed on: 2024.01.08.}
+}
+
+@online{MARTINSUBCALCULATOR,
+  author = {Martin Audio},
+  title = {Subwoofer Calculator},
+  url = {https://martin-audio.com/support/subwoofer-calculator},
+  note = {Accessed on: 2024.01.08.}}
 }
 
 ----------------------------------------------------------------------------
