--- a/bib/mybib.bib
+++ b/bib/mybib.bib
@@ -61,6 +61,13 @@
   note   = {Accessed on: 2024.01.04.}
 }
 
+@manual{IKONAMPUSEGUIDE,
+  author = {Martin Audio},
+  title = {iKON Amplifier User Guide},
+  url = {https://martin-audio.com/downloads/userguides/iKON-Amplifier-User%20Guide.pdf},
+  note   = {Accessed on: 2024.01.04.}
+}
+
 @online{MERLINVANVEEN,
   author = {Merlijn van Veen},
   title = {Calculators},
@@ -72,6 +79,13 @@
   author = {Martin Audio},
   title = {Subwoofer Calculator},
   url = {https://martin-audio.com/support/subwoofer-calculator},
+  note = {Accessed on: 2024.01.08.}}
+}
+
+@online{AHSQ,
+  author = {Allen \& Heath},
+  title = {SQ Series},
+  url = {https://www.allen-heath.com/hardware/sq},
   note = {Accessed on: 2024.01.08.}}
 }
 
